tests/trybuild-failures/not_binary_expression.stderr
error[E0308]: mismatched types
 --> $DIR/not_binary_expression.rs:6:16
  |
6 |     assertify!("foo");
  |     -----------^^^^^-
  |     |          |
  |     |          expected `bool`, found `&str`
  |     expected due to this
